Added Injector module, that allows to run application from in-memory byte array

--- a/Sources/CompSec/CompSec.vcxproj
+++ b/Sources/CompSec/CompSec.vcxproj
@@ -13,11 +13,13 @@
   <ItemGroup>
     <ClCompile Include="ByteArray.cpp" />
     <ClCompile Include="Container.cpp" />
+    <ClCompile Include="Injector.cpp" />
     <ClCompile Include="Io.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ByteArray.h" />
     <ClInclude Include="Container.h" />
+    <ClInclude Include="Injector.h" />
     <ClInclude Include="Io.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
