Added code to encrypt and decrypt in-memory functions

--- a/Sources/CompSec/CompSec.vcxproj
+++ b/Sources/CompSec/CompSec.vcxproj
@@ -13,12 +13,14 @@
   <ItemGroup>
     <ClCompile Include="ByteArray.cpp" />
     <ClCompile Include="Container.cpp" />
+    <ClCompile Include="FunctionEncryptor.cpp" />
     <ClCompile Include="Injector.cpp" />
     <ClCompile Include="Io.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ByteArray.h" />
     <ClInclude Include="Container.h" />
+    <ClInclude Include="FunctionEncryptor.h" />
     <ClInclude Include="Injector.h" />
     <ClInclude Include="Io.h" />
   </ItemGroup>
