--- a/Sources/CompSec/CompSec.vcxproj
+++ b/Sources/CompSec/CompSec.vcxproj
@@ -16,6 +16,7 @@
     <ClCompile Include="FunctionEncryptor.cpp" />
     <ClCompile Include="Injector.cpp" />
     <ClCompile Include="Io.cpp" />
+    <ClCompile Include="StringConverter.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ByteArray.h" />
@@ -23,6 +24,7 @@
     <ClInclude Include="FunctionEncryptor.h" />
     <ClInclude Include="Injector.h" />
     <ClInclude Include="Io.h" />
+    <ClInclude Include="StringConverter.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{CF0F222D-0642-499C-897B-3404CE05944D}</ProjectGuid>
