Fixed solution file path

--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -9,7 +9,7 @@ on:
       - master
 
 env:
-  SOLUTION_FILE_PATH: ./CompsecExperiments.sln
+  SOLUTION_FILE_PATH: ./CompSec-Experiments.sln
   BUILD_CONFIGURATION: Release
 
 jobs:
